			SWI-Prolog ChangeLog
			====================

  * ADDED: PL_get_file_name() to fetch the name of files from Prolog
    terms with options to include search, test properties, etc.
    
  * REMOVED: Undocumented interface function PL_get_filename().  Please use
    the new PL_get_file_name(), providing a stable and much more flexible
    API.

  * FIXED: compilation error on systems where profiling doesn't work
    (Pierre Barbier de Reuille).


VERSION 5.0.7 (Jun 5, 2002)
===========================

  * FIXED: Informational messages from the PLWIN.EXE console when opening
    a URL. 

  * FIXED: Editor handling problems.

  * ADDED: Statistical profiling to the Windows version.  Also modernised
    the Unix profiling implementation a bit.

  * FIXED: string_to_list(-String, +List) crash on machines with
    signal-based stack-expansion with lists of >500,000 elements
    (Wouter Jansweijer).

  * ADDED: Borland C compatibility in the SWI-Prolog header files.
    Additional information using SWI-Prolog with BC is in
    http://gollem.swi.psy.uva.nl/twiki/pl/bin/view/Foreign/BorlandC
    By Gerhard Wolfstieg.

  * MODIFIED: More improved classical I/O compatibility in telling/1
    and seeing/1.  Peter Dadam.

  * FIXED: Source-level debugger: be aware that clauses holding floats
    that are written and read-back may not unify exactly due to float
    rounding errors.

  * FIXED: quoted write to write floats using decimal dot or exponent,
    regardless of the float-format in effect.

  * ENHANCED: Skip intermediate system-predicates when walking `up' in
    the source-level debugger.

  * ENHANCED: Clear source-location on close/1 of the file currently
    holding it.

  * ADDED: allow for swapped 2nd/3th argument in absolute_file_name/3.

  * MODIFIED: relative_to(FileOrDir) to assume the relative-to is a 
    directory if nothing is known about it (Nikolaos Angelopoulos).

  * FIXED: Some manual typos (Nikolaos Angelopoulos).
